Fix header text spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,12 +52,14 @@ body {
         text-align: center;
         margin-left: 150px;
         margin: 10px 0 10px 150px;
+        line-height: 1em;
 
         small {
           font-weight: normal;
           display: block;
           font-size: 1rem;
           margin-top: 0.5rem;
+          line-height: 1em;
         }
       }
 
